# paper_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docker/root/etc/s6-overlay/s6-rc.d/svc-paper-agent/: run
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DateGroup.jsx  LogViewer.jsx  PaperCard.jsx
frontend/src/pages/: AuthorDetail.jsx  Authors.jsx  PaperDetail.jsx  Settings.jsx
src/: config.py  database.py  init_db_script.py  logger.py  main.py  migrations.py  models.py  scheduler.py  utils.py  worker.py
src/prompts/: affiliation.jinja2  scoring.jinja2  summarization.jinja2
src/services/: arxiv.py  llm.py  notifier.py  pdf_service.py  prompt_service.py
tests/: conftest.py  test_affiliations.py  test_api.py  test_arxiv.py  test_author_parsing.py  test_authors_api.py  test_fetch_paper_by_id.py  test_user_scoring.py
